task12/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: myapp-ingress
  namespace: x-namozov
spec:
  ingressClassName: nginx
  rules:
  - host: xnamozov.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: flask-app-my
            port:
              number: 5000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
